src/objects/cpm__Mandate__c.object
<CustomObject>
    <description>Mandates required for Sepa Direct Debit</description>
    <fields>
        <fullName>BookingKey__c</fullName>
        <label>BookingKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Key__c</fullName>
        <label>Contact Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DD_Reference__c</fullName>
        <label>DD Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectDebitKey__c</fullName>
        <label>DirectDebitKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandate_Key__c</fullName>
        <label>Mandate Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Profile_Key__c</fullName>
        <label>Payment Profile Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <label>Source Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A5GREEN</fullName>
                </value>
                <value>
                    <fullName>AUTO</fullName>
                </value>
                <value>
                    <fullName>BBPH</fullName>
                </value>
                <value>
                    <fullName>BBPO</fullName>
                </value>
                <value>
                    <fullName>EEM</fullName>
                </value>
                <value>
                    <fullName>EEPHE</fullName>
                </value>
                <value>
                    <fullName>ENQ602</fullName>
                </value>
                <value>
                    <fullName>ENQA1</fullName>
                </value>
                <value>
                    <fullName>ENQG1</fullName>
                </value>
                <value>
                    <fullName>FIX201111</fullName>
                </value>
                <value>
                    <fullName>IBIZ1</fullName>
                </value>
                <value>
                    <fullName>GEN</fullName>
                </value>
                <value>
                    <fullName>MANTE</fullName>
                </value>
                <value>
                    <fullName>MEMREN</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MNEWS</fullName>
                </value>
                <value>
                    <fullName>ONLINE</fullName>
                </value>
                <value>
                    <fullName>REN</fullName>
                </value>
                <value>
                    <fullName>MPHO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Account_Number__c</fullName>
        <formula>IF ( NOT(ISBLANK(cpm__Payment_Profile__r.cpm__IBAN__c
)) , cpm__Payment_Profile__r.cpm__IBAN__c
 , cpm__Payment_Profile__r.cpm__Bank_Account__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether or not this mandate is still active and available for use.</description>
        <inlineHelpText>Indicates whether or not this mandate is still active and available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Address_Line__c</fullName>
        <formula>IF ( 
    NOT ( ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__c ) ), 
        IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.MailingStreet ) ), 
        cpm__Payment_Profile__r.cpm__Contact__r.MailingStreet ,
        &quot;&quot; ),
    IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Account__r.ShippingStreet ) ), 
        cpm__Payment_Profile__r.cpm__Account__r.ShippingStreet ,
        &quot;&quot; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__City__c</fullName>
        <formula>IF ( 
    NOT ( ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__c ) ), 
        IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.MailingCity ) ), 
        cpm__Payment_Profile__r.cpm__Contact__r.MailingCity ,
        &quot;&quot; ),
    IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Account__r.ShippingCity ) ), 
        cpm__Payment_Profile__r.cpm__Account__r.ShippingCity ,
        &quot;&quot; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Contact__c</fullName>
        <description>The name of the contact that issued the mandate.</description>
        <formula>cpm__Payment_Profile__r.cpm__Contact__r.FirstName &amp; &quot; &quot; &amp;  cpm__Payment_Profile__r.cpm__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the contact that issued the mandate.</inlineHelpText>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Country__c</fullName>
        <formula>IF ( 
    NOT ( ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__c ) ), 
        IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.MailingCountry ) ), 
        cpm__Payment_Profile__r.cpm__Contact__r.MailingCountry ,
        &quot;&quot; ),
    IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Account__r.ShippingCountry ) ), 
        cpm__Payment_Profile__r.cpm__Account__r.ShippingCountry ,
        &quot;&quot; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Reference__c</fullName>
        <description>Allows you to override the default mandate reference with a custom value.</description>
        <label>Custom Reference</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Date_Signed__c</fullName>
        <description>The signing date for this mandate.</description>
        <inlineHelpText>The signing date for this mandate.</inlineHelpText>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Email__c</fullName>
        <formula>IF (  NOT( ISBLANK(cpm__Payment_Profile__r.cpm__Contact__r.Email) ) , cpm__Payment_Profile__r.cpm__Contact__r.Email , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__End_Date__c</fullName>
        <inlineHelpText>Enter an End date if you want to override manually</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__FirstName__c</fullName>
        <formula>IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.FirstName ) ) , cpm__Payment_Profile__r.cpm__Contact__r.FirstName , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__IBAN__c</fullName>
        <description>The IBAN this mandate is valid for.</description>
        <formula>cpm__Payment_Profile__r.cpm__IBAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The IBAN this mandate is valid for.</inlineHelpText>
        <label>IBAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__LastName__c</fullName>
        <formula>IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.LastName ) ) , cpm__Payment_Profile__r.cpm__Contact__r.LastName , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Status_Reason__c</fullName>
        <label>Last Status Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Used__c</fullName>
        <description>The last time this mandate was used to do a direct debit.</description>
        <inlineHelpText>The last time this mandate was used to do a direct debit.</inlineHelpText>
        <label>Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate_ID__c</fullName>
        <description>The final mandate reference, gives the custom reference if present, the auto generated one otherwise.</description>
        <formula>BLANKVALUE(cpm__Custom_Reference__c, cpm__Prefix__c &amp;&quot;&quot;&amp; CASESAFEID(Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The final mandate reference, gives the custom reference if present, the auto generated one otherwise.</inlineHelpText>
        <label>Mandate ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandate Schedule</label>
        <referenceTo>cpm__Mandate_Schedule__c</referenceTo>
        <relationshipLabel>Mandates</relationshipLabel>
        <relationshipName>Mandates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The payment profile this mandate is valid for.</description>
        <inlineHelpText>The payment profile this mandate is valid for.</inlineHelpText>
        <label>Payment Profile</label>
        <referenceTo>cpm__Payment_Profile__c</referenceTo>
        <relationshipName>Mandates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__PostalCode__c</fullName>
        <formula>IF ( 
    NOT ( ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__c ) ), 
        IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.MailingPostalCode ) ), 
        cpm__Payment_Profile__r.cpm__Contact__r.MailingPostalCode ,
        &quot;&quot; ),
    IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Account__r.ShippingPostalCode ) ), 
        cpm__Payment_Profile__r.cpm__Account__r.ShippingPostalCode ,
        &quot;&quot; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Prefix__c</fullName>
        <inlineHelpText>Enter a value if you want to prefix the Mandate ID</inlineHelpText>
        <label>Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Prenotification_Date__c</fullName>
        <description>The date a pre-notification was sent.</description>
        <inlineHelpText>The date a pre-notification was sent.</inlineHelpText>
        <label>Pre-notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Reference__c</fullName>
        <description>The mandate reference.</description>
        <inlineHelpText>The mandate reference.</inlineHelpText>
        <label>Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending registration</fullName>
                </value>
                <value>
                    <fullName>Pending cancellation</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BACS Direct Debit</fullName>
                    <default>true</default>
                    <label>BACS Direct Debit</label>
                </value>
                <value>
                    <fullName>Replace by Target</fullName>
                </value>
                <value>
                    <fullName>HMRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Title__c</fullName>
        <formula>IF ( NOT (ISBLANK ( cpm__Payment_Profile__r.cpm__Contact__r.Title ) ) , cpm__Payment_Profile__r.cpm__Contact__r.Title , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CARE N/A</fullName>
                    <default>true</default>
                    <label>CARE N/A</label>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>One-Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Unique_Mandate_Id__c</fullName>
        <description>Unique mandate ID that is filled by a workflow. This field is needed to make sure we have unique ids throughout the ORG</description>
        <externalId>true</externalId>
        <label>Unique Mandate Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cpm__Use_First_on_next_run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the transactions using this mandate are offered as FIRST to the bank.</description>
        <inlineHelpText>When checked, the transactions using this mandate are offered as FIRST to the bank.</inlineHelpText>
        <label>Use First on next run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Valid_Until__c</fullName>
        <description>The valid until date for this mandate.</description>
        <formula>/*IF ( NOT(ISBLANK(End_Date__c)) , End_Date__c, 
IF (NOT(ISBLANK(Last_Used__c)) , DATE( YEAR(Last_Used__c) + 3 , MONTH(Last_Used__c), DAY(Last_Used__c) ),
IF (NOT(ISBLANK(Date_Signed__c)), DATE( YEAR(Date_Signed__c) + 3, MONTH(Date_Signed__c), DAY(Date_Signed__c) ), Null 
)))*/

BLANKVALUE(cpm__End_Date__c,
IF(
  AND(
    MONTH( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) = 2,
    DAY( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, 400 ) = 0, 
        AND( 
          MOD( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, 4 ) = 0,
          MOD( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, 2, 28),
  DATE( YEAR( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) + 3, MONTH( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ), DAY( BLANKVALUE(cpm__Last_Used__c, cpm__Date_Signed__c) ) )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>paybacs__Payer_Name__c</fullName>
        <formula>cpm__Payment_Profile__r.cpm__Holder_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paybacs__Register_Date__c</fullName>
        <description>Date that the mandate was registered / activated</description>
        <label>Register Date</label>
        <type>Date</type>
    </fields>
    <label>Mandate</label>
    <nameField>
        <displayFormat>MD-{0000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>